; ModuleID = '/home/carl/AnghaBench/git/refs/extr_files-backend.c_get_loose_ref_cache.c'
source_filename = "/home/carl/AnghaBench/git/refs/extr_files-backend.c_get_loose_ref_cache.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

%struct.ref_cache = type { %struct.TYPE_2__* }
%struct.TYPE_2__ = type { i32 }
%struct.files_ref_store = type { %struct.ref_cache*, i32 }

@loose_fill_ref_dir = common dso_local global i32 0, align 4
@REF_INCOMPLETE = common dso_local global i32 0, align 4
@.str = private unnamed_addr constant [6 x i8] c"refs/\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (%struct.ref_cache* (%struct.files_ref_store*)* @get_loose_ref_cache to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal %struct.ref_cache* @get_loose_ref_cache(%struct.files_ref_store* %0) #0 {
  %2 = alloca %struct.files_ref_store*, align 8
  store %struct.files_ref_store* %0, %struct.files_ref_store** %2, align 8
  %3 = load %struct.files_ref_store*, %struct.files_ref_store** %2, align 8
  %4 = getelementptr inbounds %struct.files_ref_store, %struct.files_ref_store* %3, i32 0, i32 0
  %5 = load %struct.ref_cache*, %struct.ref_cache** %4, align 8
  %6 = icmp ne %struct.ref_cache* %5, null
  br i1 %6, label %35, label %7

7:                                                ; preds = %1
  %8 = load %struct.files_ref_store*, %struct.files_ref_store** %2, align 8
  %9 = getelementptr inbounds %struct.files_ref_store, %struct.files_ref_store* %8, i32 0, i32 1
  %10 = load i32, i32* @loose_fill_ref_dir, align 4
  %11 = call %struct.ref_cache* @create_ref_cache(i32* %9, i32 %10)
  %12 = load %struct.files_ref_store*, %struct.files_ref_store** %2, align 8
  %13 = getelementptr inbounds %struct.files_ref_store, %struct.files_ref_store* %12, i32 0, i32 0
  store %struct.ref_cache* %11, %struct.ref_cache** %13, align 8
  %14 = load i32, i32* @REF_INCOMPLETE, align 4
  %15 = xor i32 %14, -1
  %16 = load %struct.files_ref_store*, %struct.files_ref_store** %2, align 8
  %17 = getelementptr inbounds %struct.files_ref_store, %struct.files_ref_store* %16, i32 0, i32 0
  %18 = load %struct.ref_cache*, %struct.ref_cache** %17, align 8
  %19 = getelementptr inbounds %struct.ref_cache, %struct.ref_cache* %18, i32 0, i32 0
  %20 = load %struct.TYPE_2__*, %struct.TYPE_2__** %19, align 8
  %21 = getelementptr inbounds %struct.TYPE_2__, %struct.TYPE_2__* %20, i32 0, i32 0
  %22 = load i32, i32* %21, align 4
  %23 = and i32 %22, %15
  store i32 %23, i32* %21, align 4
  %24 = load %struct.files_ref_store*, %struct.files_ref_store** %2, align 8
  %25 = getelementptr inbounds %struct.files_ref_store, %struct.files_ref_store* %24, i32 0, i32 0
  %26 = load %struct.ref_cache*, %struct.ref_cache** %25, align 8
  %27 = getelementptr inbounds %struct.ref_cache, %struct.ref_cache* %26, i32 0, i32 0
  %28 = load %struct.TYPE_2__*, %struct.TYPE_2__** %27, align 8
  %29 = call i32 @get_ref_dir(%struct.TYPE_2__* %28)
  %30 = load %struct.files_ref_store*, %struct.files_ref_store** %2, align 8
  %31 = getelementptr inbounds %struct.files_ref_store, %struct.files_ref_store* %30, i32 0, i32 0
  %32 = load %struct.ref_cache*, %struct.ref_cache** %31, align 8
  %33 = call i32 @create_dir_entry(%struct.ref_cache* %32, i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str, i64 0, i64 0), i32 5, i32 1)
  %34 = call i32 @add_entry_to_dir(i32 %29, i32 %33)
  br label %35

35:                                               ; preds = %7, %1
  %36 = load %struct.files_ref_store*, %struct.files_ref_store** %2, align 8
  %37 = getelementptr inbounds %struct.files_ref_store, %struct.files_ref_store* %36, i32 0, i32 0
  %38 = load %struct.ref_cache*, %struct.ref_cache** %37, align 8
  ret %struct.ref_cache* %38
}

declare dso_local %struct.ref_cache* @create_ref_cache(i32*, i32) #1

declare dso_local i32 @add_entry_to_dir(i32, i32) #1

declare dso_local i32 @get_ref_dir(%struct.TYPE_2__*) #1

declare dso_local i32 @create_dir_entry(%struct.ref_cache*, i8*, i32, i32) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
